Updated width css to rid mobile responsive overhang of divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -902,4 +902,10 @@ article.languages > h5 {
   .arrow {
     display: none;
   }
+
+  .logoCenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
