Testing social icon resize media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -908,4 +908,18 @@ article.languages > h5 {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .social {
+    width: 35px;
+    height: 35px;
+    background-size: 35px 35px;
+  }
+}
+
+@media (max-width: 34em) {
+  .social {
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+  }
 }
