--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,49 +678,49 @@ a.no-bar {
 }
 
 .asucla {
-    background-image: url(../images/websites/asucla-logo.png);
+    background-image: url(../images/websites/asucla-logo.webp);
     width: 200px;
     height: 53px;
     background-size: 200px 53px;
 }
 
 .uclaAthletics {
-    background-image: url(../images/websites/ucla-athletics.jpg);
+    background-image: url(../images/websites/ucla-athletics.webp);
     width: 200px;
     height: 113px;
     background-size: 200px 113px;
 }
 
 .uclaLicensing {
-    background-image: url(../images/websites/ucla-licensing.png);
+    background-image: url(../images/websites/ucla-licensing.webp);
     width: 185px;
     height: 51px;
     background-size: 185px 51px;
 }
 
 .uclaStore {
-    background-image: url(../images/websites/ucla-store.png);
+    background-image: url(../images/websites/ucla-store.webp);
     width: 150px;
     height: 112px;
     background-size: 150px 112px;
 }
 
 .kidzDentalCare {
-    background-image: url(../images/websites/kidzdentalcare.jpg);
+    background-image: url(../images/websites/kidzdentalcare.webp);
     width: 200px;
     height: 122px;
     background-size: 200px 122px;
 }
 
 .uclaHealth {
-    background-image: url(../images/websites/UGraphic_RGB.jpg);
+    background-image: url(../images/websites/UGraphic_RGB.webp);
     width: 112px;
     height: 112px;
     background-size: 112px 112px;
 }
 
 .languageBird {
-    background-image: url(../images/websites/languagebird.png);
+    background-image: url(../images/websites/languagebird.webp);
     width: 300px;
     height: 45px;
     background-size: 300px 45px;
