Revert back to minimized image formats for cross browser support

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ article {
 }
 
 .shawnTylerSchwartz {
-    background-image: url(../images/shawn.webp);
+    background-image: url(../images/shawn.jpg);
     height: 200pt;
     padding: 0;
     padding-bottom: 75%;
@@ -411,7 +411,7 @@ article {
 }
 
 .signature {
-    background-image: url(../images/signature.webp);
+    background-image: url(../images/signature.png);
     height: 350px;
     width: 344px;
     padding: 0;
@@ -678,49 +678,49 @@ a.no-bar {
 }
 
 .asucla {
-    background-image: url(../images/websites/asucla-logo.webp);
+    background-image: url(../images/websites/asucla-logo.png);
     width: 200px;
     height: 53px;
     background-size: 200px 53px;
 }
 
 .uclaAthletics {
-    background-image: url(../images/websites/ucla-athletics.webp);
+    background-image: url(../images/websites/ucla-athletics.jpg);
     width: 200px;
     height: 113px;
     background-size: 200px 113px;
 }
 
 .uclaLicensing {
-    background-image: url(../images/websites/ucla-licensing.webp);
+    background-image: url(../images/websites/ucla-licensing.png);
     width: 185px;
     height: 51px;
     background-size: 185px 51px;
 }
 
 .uclaStore {
-    background-image: url(../images/websites/ucla-store.webp);
+    background-image: url(../images/websites/ucla-store.png);
     width: 150px;
     height: 112px;
     background-size: 150px 112px;
 }
 
 .kidzDentalCare {
-    background-image: url(../images/websites/kidzdentalcare.webp);
+    background-image: url(../images/websites/kidzdentalcare.jpg);
     width: 200px;
     height: 122px;
     background-size: 200px 122px;
 }
 
 .uclaHealth {
-    background-image: url(../images/websites/UGraphic_RGB.webp);
+    background-image: url(../images/websites/UGraphic_RGB.jpg);
     width: 112px;
     height: 112px;
     background-size: 112px 112px;
 }
 
 .languageBird {
-    background-image: url(../images/websites/languagebird.webp);
+    background-image: url(../images/websites/languagebird.png);
     width: 300px;
     height: 45px;
     background-size: 300px 45px;
