force reloading of cached elements with temp new names

--- a/assets/css/style_shawn.css
+++ b/assets/css/style_shawn.css
@@ -2,7 +2,7 @@
 
 /*
 *
-* Copyright (C) Shawn Tyler Schwartz, 2018
+* Copyright (C) Shawn Tyler Schwartz, 2018-2019
 * https://shawntylerschwartz.com
 * 
 * shawnschwartz@ucla.edu
@@ -384,7 +384,7 @@ article {
 }
 
 .shawnTylerSchwartz {
-    background-image: url(../images/shawn.jpg);
+    background-image: url(../images/shawn_light.jpg);
     height: 200pt;
     padding: 0;
     padding-bottom: 75%;
