Optimized large scale graphics and updated JavaScript resources

--- a/assets/css/style_shawn.css
+++ b/assets/css/style_shawn.css
@@ -384,7 +384,7 @@ article {
 }
 
 .shawnTylerSchwartz {
-    background-image: url(../images/shawn_light.jpg);
+    background-image: url(../images/shawn_light_min.jpg);
     height: 200pt;
     padding: 0;
     padding-bottom: 75%;
