change mobile bottom margin of body

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -571,6 +571,8 @@ pre {
 @media (max-width: 38em) {
   body {
     min-height: 1000px;
+    margin-bottom: 500px;
+    clear: both;
   }
 
   .bigname {
