Fixed Safari cfooter issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
             {{ content }}
         </article>
     </section>
+    <div class="spacer"></div>
     {% include footer.html %}
     {% include preload.html %}
   </body>
