--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -567,15 +567,13 @@ pre {
   margin-left: 1.5pt;
 }
 
+.spacer {
+  clear: both;
+  height: 200px;
+}
+
 /* Media Queries */
 @media (max-width: 38em) {
-  body {
-    min-height: 2000px;
-    margin-bottom: 1200px;
-    clear: both;
-    background: red;
-  }
-
   .bigname {
     font-size: 2.9em;
     padding-top: 2%;
