--- a/_includes/style.landing.html
+++ b/_includes/style.landing.html
@@ -1,5 +1,5 @@
     <style>
-        body { background-image: url('assets/images/shawn-schwartz-cover.png'); background-size: cover; background-position: center center; background-repeat: no-repeat; }
+        body { background-image: url('assets/images/shawn-schwartz-cover.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; }
         .submenu li a { color: #ffffff; }
         a.invisible { color: #ffffff; }
     </style>
