--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,8 +18,8 @@
 
 // Font Variables
 $perm-marker: 'Permanent Marker', sans-serif;
-// $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-$bodyFont: 'Open Sans',"Helvetica Neue",serif,Helvetica,Arial,sans-serif;
+$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+// $bodyFont: 'Open Sans',"Helvetica Neue",serif,Helvetica,Arial,sans-serif;
 
 // Body Variables
 $backgroundColor: #ffffff;
