--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -138,6 +138,15 @@ article {
   margin: 20pt 0;
 }
 
+small, .small {
+  font-size: 90%;
+  font-weight: 400;
+}
+
+.fa-ul li {
+  margin: 0 0 10px 0 !important;
+}
+
 img {
   width: 100%;
   height: auto;
