--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,14 +11,14 @@
 
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 // Font Variables
 $perm-marker: 'Permanent Marker', sans-serif;
-$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 // $bodyFont: 'Open Sans',"Helvetica Neue",serif,Helvetica,Arial,sans-serif;
 
 // Body Variables
@@ -63,7 +63,6 @@ body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   min-height: 500px; /* prevent sticky footer from covering body content */
-  margin-bottom: 250px;
   clear: both;
 }
 
@@ -275,6 +274,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
+  z-index: 9999;
   text-align: center;
   background: rgba(255, 255, 255, 0.7);
   backdrop-filter: saturate(100%) blur(10pt);
@@ -282,6 +282,7 @@ footer {
   -moz-backdrop-filter: saturate(100%) blur(10pt);
   -ms-backdrop-filter: saturate(100%) blur(10pt);
   -o-backdrop-filter: saturate(100%) blur(10pt);
+  height: 60px;
 }
 
 /*
@@ -337,11 +338,11 @@ blockquote p {
 }
 
 .social {
-  margin-top: 0.1em;
+  margin-top: 0.2em;
   font-weight: 300;
-  width: 40px;
-  height: 40px;
-  background-size: 40px 40px;
+  width: 35px;
+  height: 35px;
+  background-size: 35px 35px;
   background-position: center center;
   background-repeat: no-repeat;
   display: inline-block;
@@ -353,7 +354,7 @@ blockquote p {
 }
 
 article.social-icons {
-  margin-top: -10px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -606,7 +607,8 @@ pre {
 
 .spacer {
   clear: both;
-  height: 150px;
+  // height: 150px;
+  height: 50px;
 }
 
 /* Media Queries */
